name: reflex-notifications
version: 0.1
cabal-version: >= 1.8
build-type: Simple
synopsis: Reflex based wrapper around the Notifications API
description: Reflex based wrapper around the Notifications API
license: BSD3
license-file: LICENSE
author: Obsidian Systems LLC
copyright: 2022 Obsidian Systems LLC
maintainer: maintainer@obsidian.systems
category: Web
extra-source-files: CHANGELOG.md

library
  hs-source-dirs: src
  build-depends: base
               , data-default
               , jsaddle
               , lens
               , obelisk-executable-config-lookup
               , obelisk-generated-static
               , obelisk-frontend
               , obelisk-route
               , reflex-dom-core
               , text
  exposed-modules:
    Reflex.Notifications
    Reflex.Notifications.Types
    Reflex.Notifications.Util
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits
